# equities-prediction-model

./: CMakeLists.txt  README.md  makerel.bat  setup_gt.bat  setup_gt_root519.bat
source/src/: CMakeLists.txt
source/src/HCore/: CMakeLists.txt  HCore.cpp
source/src/HFitting/: CMakeLists.txt  HBiLinModTest.cpp  HCompSig.cpp  HFitIndexAR.cpp  HMakeHedge.cpp  HMakePredIndex.cpp  HMakeSample.cpp  HMakeSampleIndex.cpp  HMakeSampleTarget.cpp  HReadChara.cpp  HReadOrder.cpp  HReadSample.cpp  VarianceModel.cpp  flt.cpp  sig.cpp  writeSig.cpp
source/src/HLearn/: CMakeLists.txt  HBinSigRead.cpp  HNNReadRoot.cpp  HNNSample.cpp  HNNSampleCommodity.cpp  HNNSampleNews.cpp  HNNSampleNewsFile.cpp  HNNSampleRead.cpp  HNNTester.cpp  HNNTrader.cpp  HNNTrainer.cpp  HSignalNewsBin.cpp  HSignalNewsFile.cpp  HSignalRead.cpp  HSignalSubset.cpp  NewsSignal.cpp  mcpred.cpp
source/src/HLearnObj/: BPNNbatch.cpp  BPTT.cpp  BPTT2.cpp  BPTTpred.cpp  BPTTpred2in.cpp  BPTTpred2inD.cpp  CMakeLists.txt  InputInfo.cpp  NNBase.cpp  Pred2Sig.cpp  Pred2Sig_2in.cpp  Sample.cpp  Signal.cpp
source/src/HLib/: AR.cpp  CMakeLists.txt  EurexOrder.cpp  HEnv.cpp  HEvent.cpp  HInit.cpp  HInitModel.cpp  HModule.cpp  QProfile.cpp  QTH1F.cpp  TickReader.cpp  pooledar.cpp
source/src/HNews/: CMakeLists.txt  HNewsComp.cpp  HNewsRead.cpp  HNewsReadGlobal.cpp  HNewsScope.cpp  HRavenPack.cpp  HRavenPackAgg.cpp  HRavenPackAggMarketRet.cpp  HRavenPackGlobal.cpp  HRavenPackRead.cpp  companiesrp.cpp
source/src/HOrders/: CMakeLists.txt  HCloseToCloseAna.cpp  HEurexRead.cpp  HFillTime.cpp  HFillTimeHist.cpp  HMarketMakingSpeed.cpp  HMercatorTrades.cpp  HOrderAna.cpp  HOrderSumm.cpp  HOrderSummRead.cpp  HOrderSummRead_test.cpp  HReturnAna.cpp  HTradeAna.cpp  HTradeAnaGainSig.cpp  HTradeAnaGainSigMult.cpp  HTradeAnaProfile.cpp  HTradeAnaVolume.cpp  HaltCondPnl.cpp  HaltCondRet.cpp  HaltCondRetWgt.cpp  HaltSched.cpp  HaltSim.cpp  HaltSimCumPred.cpp  HaltSimCumPredRat.cpp  HaltSimMult.cpp  HaltSimPnl.cpp  HaltSimRet.cpp  HaltSimRetWgt.cpp
source/src/HTickSeries/: CMakeLists.txt  FindReturns.cpp  HQuoteSample.cpp  HTickLoad.cpp  HTickRead.cpp  HTickReadIndex.cpp  HTickReadM.cpp  HTickSeries.cpp  HTickSeriesHedge.cpp  HTickSeriesNews.cpp  HTickSeriesQuote.cpp  HTickSeriesTrade.cpp  TickSeriesFtns.cpp
source/src/MCore/: CMakeLists.txt  MCore.cpp  ModuleFactory.cpp
source/src/MFitMod/: CMakeLists.txt  MFastSim.cpp  MFastSimDataDump.cpp  MFitAna.cpp  MFitNtrees.cpp  MFitRead.cpp  MFitter.cpp  MPrintTrades.cpp  MVolSurpAna.cpp
source/src/MFitObj/: CMakeLists.txt  CorrInput.cpp  DT.cpp  DTBase.cpp  DTBoost.cpp  DTMT.cpp  DTMTpre.cpp  DTNode.cpp  FitISLE.cpp  Perf.cpp
source/src/MFitting/: CMakeLists.txt  HFGetData.cpp  HFSTree.cpp  HFTrees.cpp  MAnalyze.cpp  MCombineTree.cpp  MFitISLE.cpp  MFitNonLinMod.cpp  MFitVariance.cpp  MFitterTest.cpp  MModuleExample.cpp  MPsedoTradeAdapt.cpp  MPseudoTrade.cpp  MPseudoTradeAdaptVol.cpp  MPseudoTradeAuction.cpp  MPseudoTradeFullSimComp.cpp  MPseudoTradeIntra.cpp  MPseudoTradeMM.cpp  MPseudoTradeMultPred.cpp  MPseudoTradePred.cpp  MPseudoTradePrep.cpp  MPseudoTradeProfile.cpp  MPseudoTradeRestore.cpp  MPseudoTrade_10m.cpp  MReadSample.cpp  MReadSignal.cpp  MReadSignalON.cpp  MReadTickerState.cpp  MTurnover.cpp  MWriteTree.cpp  TickerPosition.cpp
source/src/MFramework/: CMakeLists.txt  MEnv.cpp  MEvent.cpp  MInit.cpp  MInitFut.cpp  MInitModel.cpp  MModuleBase.cpp  MSelectTickers.cpp
source/src/MFutModel/: CMakeLists.txt  MTickReadFut.cpp
source/src/MOrders/: CMakeLists.txt  MMercatorTrades.cpp  MOrderAna.cpp  MOrderSummRead.cpp  MSampleCaptureRat.cpp  MSelfDealingAna.cpp  MTradeAna.cpp  MTradeEventAna.cpp  TradeQuantileInfo.cpp
source/src/MSigMod/: CMakeLists.txt  MMakeSampleMicro.cpp  MMakeSampleTP.cpp  MTradeQuoteLatency.cpp  SignalCalculatorMicro.cpp  SignalCalculatorMicroTest.cpp  SignalCalculatorTP.cpp  TradeQuoteLatencyCalculator.cpp
source/src/MSignal/: CMakeLists.txt  IndexInputMaker.cpp  MCompSignal.cpp  MDumpSignalDL.cpp  MFitIndexAR.cpp  MFitIndexOLS.cpp  MFitIndexOLSTest.cpp  MMakeBeta.cpp  MMakeBetaTest.cpp  MMakeHedge.cpp  MMakeHedgeAt.cpp  MMakePredIndex.cpp  MMakePredIndexOLS.cpp  MMakePredIndexOLSTest.cpp  MMakeSample.cpp  MMakeSampleBB.cpp  MMakeSampleEvt.cpp  MMakeSample_at.cpp  MMercatorTradeTime.cpp  MMergePred.cpp  MPasteSample.cpp  MReadBeta.cpp  MReadChara.cpp  MReadNews.cpp  MReadOrder.cpp  MRepairSignalCnt.cpp  MSimComp.cpp  MTickRead.cpp  MTickReadIndex.cpp  MTickReadNext.cpp  MTickReadSimple.cpp  MTopBottomAna.cpp  MWriteFilters.cpp  MWriteHfuniv.cpp  MWriteWeightsTest.cpp  SigSet.cpp  SignalCalculator.cpp  SignalCalculatorTest.cpp  flt.cpp  sig.cpp  (+3 more)
source/src/gtlib/: CMakeLists.txt  EstTime.cpp  util.cpp
source/src/gtlib_fastsim/: CMakeLists.txt  FastSim.cpp  FastSimDataDump.cpp  FastSimNet.cpp  FastSimSimple.cpp  fastsimObjs.cpp
source/src/gtlib_fitana/: AnaAllDaysStat.cpp  AnaDayStatMaker.cpp  AnaObject.cpp  AnaObjectBySprd.cpp  CMakeLists.txt  EvStatMaker.cpp  MevStatMaker.cpp  PredAna.cpp  PredAnaBySprd.cpp  PredLine.cpp  TargetPred.cpp  fitanaObjs.cpp
source/src/gtlib_fitting/: BDT_costWgtTar.cpp  BDT_wgtTradable.cpp  BoostedDecisionTree.cpp  CMakeLists.txt  CorrInput.cpp  DTFtns.cpp  DailyDataCount.cpp  DecisionTree.cpp  DecisionTreeRegression.cpp  DecisionTreeRegressionForce.cpp  DecisionTreeRegressionPrune.cpp  DecisionTreeRegressionTimeWgt.cpp  DecisionTreeRegressionWgt.cpp  FitData.cpp  Fitter.cpp  PerfBoost.cpp  PredFromBoostedTree.cpp  VariablesInfo.cpp  fittingFtns.cpp  fittingObjs.cpp
source/src/gtlib_gui/: BidAskFrame.cpp  CMakeLists.txt  MyMainFrame.cpp
source/src/gtlib_linmod/: ARMulti.cpp  BiLinearModel.cpp  BiLinearModelN.cpp  BiLinearModelWeights.cpp  CMakeLists.txt  CovMatSet.cpp  CovMatSetCollErr.cpp  CovMatSetCollUniv.cpp
source/src/gtlib_model/: CMakeLists.txt  FutSigPar.cpp  hff.cpp  mFtns.cpp  mdl.cpp  pathFtns.cpp
source/src/gtlib_predana/: CMakeLists.txt  GsprFtns.cpp  GsprObjectMultTar.cpp  GsprObjectSimple.cpp  PAnaSimple.cpp  PObjMultTar.cpp  PredAnaByNTree.cpp  PredAnaByNTreeMultTar.cpp  PredAnaByQuantile.cpp  (+7 more)
(+794 files in other folders)
